On the Python front: Numerous updates to meshing scripts, including some new functions. Also added pycache to the gitignore file, and used git rm to prevent tracking of the meshing_scripts/distmesh/__pycache__ that had been going on. On the c++ front: Switched do_dialling.cpp over to non-LCE mode, to make it consistent with the gauss-codazzi-mainardi example, which stupidly it wasn't previously

--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@
 *.exe
 *.o
 *.so
+*/__pycache__/*
 
 # Packages #
 ############
@@ -35,3 +36,7 @@
 .Trashes
 ehthumbs.db
 Thumbs.db
+
+# Other stuff? #
+#######################
+
